@@ -1,3 +1,7 @@
+2006-08-10  Stephane Mikaty  <stephane@mikaty.net>
+	
+	* gnu/testlet/javax/xml/xpath/XPath.java: New test.
+
 2006-08-30  Sven de Marothy  <sven@physto.se>
 
 	* gnu/testlet/java/util/UUID/TestAll.java: new file.
